# letmecook_backend

./: .bashrc.swp  main.py  pyproject.toml
letmecook/alibaba/: core.py
letmecook/alibaba/qwen/: __init__.py  models.py  oss_core.py  qwen_core.py  routes.py
letmecook/alibaba/translation/: translation.py
letmecook/core/: LetMeCookBaseModel.py  mongo_database.py
letmecook/recipe/: models.py  routes.py  validator.py
letmecook/user/: models.py  routes.py
tests/: conftest.py  test_main.py
tests/recipe/: conftest.py  test_add_favorite.py  test_delete_favorite.py  test_get_favorite.py  test_get_favorite_by_username.py  test_get_random.py  test_get_recipe.py  test_search_ingredient.py  test_search_recipe.py
tests/user/: conftest.py  test_create_user.py  test_delete_user.py  test_get_me.py  test_get_user.py  test_login_user.py  test_update_user.py
